Fixed building with react errors

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Example</title>
     <script lang="javascript" src="js/thirdParty.js"></script>
-    <script lang="javascript" src="js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
     <link href="css/thirdParty.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>This is an example</h1>
+    <div id="container"></div>
 </body>
+
+<script type="text/babel" src="js/script.js"></script>
+
 </html>
