Created Viewport component

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="news-reader-application"></div>
 </body>
 
 <script type="text/babel" src="js/script.js"></script>
